tests/parser/invalidinput/emptyformula.idp
vocabulary V {
	type x
	p(x)
}

query Q:V {
	{x[x] : }
}

structure S:V {
	x = {1..4}
	p = {1..3}
}

procedure getExpectedSet(){
  return {{1},{2},{3},{4}}
}

procedure main(){
	return 1
}
